--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </div>
          </div>
     </template>
-    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.4.0/axios.min.js"></script>
     <script src = "script.js"></script>
 </body>
 </html>
