Fixed Navbar For Home Page

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                     <li class="hover-link nav-item" id = "science" onclick = "onNavItemClick('science')">Science</li>
                     <li class="hover-link nav-item" id = "health" onclick = "onNavItemClick('health')">Health</li>
                     <li class="hover-link nav-item" id = "entertainment" onclick = "onNavItemClick('entertainment')">Entertainment</li>
-                    <button id="darkmode" style="padding: 0.4rem;color: rgb(0, 0, 0);background-color: rgb(0, 0, 0);border-radius: 0.3rem;margin-left: 4rem;" onclick="changeToDarkMode(this)"><img style="width: 1.5rem;filter: invert(100%);" src="/assests/dark.png"/></button>
-                    <button id="lightmode" style="padding: 0.4rem;color: black;background-color: rgb(255, 255, 255);display: none;border-radius: 0.3rem;margin-left: 4rem;" onclick="changeToLightMode(this)"><img style="width: 1.5rem;" src="/assests/light.png"/></button>
+                    <button id="darkmode" style="padding: 0.4rem;color: rgb(0, 0, 0);background-color: rgb(0, 0, 0);border-radius: 0.3rem;margin-left: 4rem;" onclick="changeToDarkMode(this)"><img style="width: 1.5rem;filter: invert(100%);" src="assests/dark.png"/></button>
+                    <button id="lightmode" style="padding: 0.4rem;color: black;background-color: rgb(255, 255, 255);display: none;border-radius: 0.3rem;margin-left: 4rem;" onclick="changeToLightMode(this)"><img style="width: 1.5rem;" src="assests/light.png"/></button>
                   </ul>
               </div> 
               <div class="search-bar">
